Fixes spacing 2, electric boogaloo

--- a/static/sidebar.less
+++ b/static/sidebar.less
@@ -148,7 +148,6 @@ img.social-icon-small {
 							padding-left: 0;
 							span {
 								font-weight: normal;
-								margin-top: 10px;
 								display: inline-flex;
 								text-transform: none;
 								font-weight: bold;
